--- a/package.json
+++ b/package.json
@@ -16,6 +16,10 @@
   "dependencies": {
     "gatsby": "^2.20.12",
     "gatsby-plugin-sass": "^2.2.1",
+    "gatsby-plugin-sharp": "^2.5.4",
+    "gatsby-remark-images": "^3.2.2",
+    "gatsby-remark-relative-images": "^0.3.0",
+    "gatsby-source-contentful": "^2.1.19",
     "gatsby-source-filesystem": "^2.0.28",
     "gatsby-transformer-remark": "^2.3.8",
     "node-sass": "^4.13.1",
